Dark mode fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,6 +61,7 @@ canvas {
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 16px;
+    background-color: rgb(32, 33, 37);
 }
 
 strong {
@@ -68,7 +69,7 @@ strong {
 }
 
 .container-fluid {
-    background-color: #222;
+    background-color: rgb(22, 23, 27);
 }
 
 footer.page-footer {
